# Semi-Pervault-MCP

./: .env.example  .gitignore  AGENTS.md  AGENT_PROMPT_GUIDE.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  RUN.command
.github/workflows/: ci.yml
apps/mcp_host/: README.md  pyproject.toml  server.py
apps/mcp_host/tests/: e2e_roundtrip.py  test_tool_mapping.py
backend/: .env.example  .gitignore  AGENTS.md  README.md  main.py  pyproject.toml
backend/mock_data/: edges.json  memories.json  nodes.json
backend/routers/: auth.py  chat.py  core.py  graph.py  memory.py  realtime.py  system.py  voice.py  voice_v2.py
backend/scripts/: eval_retrieval.py  golden_queries.py  regression_retrieval.py  run_consolidation.py  test_embedding_dim.py
backend/services/: realtime_session.py  voice_v2_session.py
backend/tests/: conftest.py  test_background_jobs.py  test_chat_pahf.py  test_connection_strategy.py  test_core_api.py  test_home_overview.py  test_long_term_layers_route.py  test_memory_admission.py  test_memory_pipeline_trace.py  test_memory_search_filters.py  test_realtime.py  test_security_v1.py  test_stage0_contracts.py  test_voice_v2.py
docs/: codebase.md  launch-kit.md
docs/derivative/: 01-架构改造方案.md
docs/plan/: four-memory-architecture-integration-plan.md
